WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283477
[UnifiedPDF] [iPadOS] Web process crash under WebKit::populateCaretContext() when trackpad hover over PDF document
https://bugs.webkit.org/show_bug.cgi?id=283477
Summary
[UnifiedPDF] [iPadOS] Web process crash under WebKit::populateCaretContext() ...
Abrar Rahman Protyasha
Reported
2024-11-21 01:34:16 PST
rdar://140191140
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-11-21 11:31:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36964
EWS
Comment 2
2024-11-21 14:53:41 PST
Committed
286927@main
(1113729a76ef): <
https://commits.webkit.org/286927@main
> Reviewed commits have been landed. Closing PR #36964 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug